app/assets/stylesheets/directory_objects_show.css.scss
/* ... */
#accessibility-nav {
  &.safari-mobile-compatibility {
    margin-top: -70px; /* Effective move up contents of page to accomodate nav bad */
  }
}

#map {
  &.safari-mobile-compatibility {
    margin-top: -35px;
    margin-bottom: 35px;
  }
}

/* this is the map display */
#map {
  width: 100%;
  height: calc(90vh - 28vw);
  min-height: 60vh; /* Only occurs when device is wider than tall (iPad)*/
  text-align: center;

}

/* Scale font size, line height, active, etc based on screen size */
.floor-nav {
  text-align: center; /* UL centered in this top div */
  padding-bottom: 0;

  ul {
    display: inline-block;
    padding: 0; /* Padding is non-zero by default */
    margin-bottom: 0;

    li {
      display: inline-block;
      width: calc(100vw / 7); /* Spread evenly and leave some extra */
      max-width: 15vh; /* Only occurs when device is wider than tall (iPad)*/
      padding-left: 0.5vw;
      padding-right: 0.5vw;
      padding-bottom: 0;
      padding-top: 0;

      img { /* images will maintain aspect ratio => height of this div == width of li */
        width: 100%;
        height: auto;
      }
    }
  }

  .btn-floor.start { /* Circular border stylizing for start floor */
      border-radius: 50%;
      border-width: 3px;
      border-style: solid;
      border-color: #00e13c;
  }

  .btn-floor.destination { /* Circular border stylizing for destination floor */
      border-radius: 50%;
      border-width: 3px;
      border-style: solid;
      border-color: $destination-floor-color;
  }
}

/* Used for floor anchors */
.btn-floor {
  display: block;

  img {
    opacity: 0.6;
  }

  &.active {
    img { 
      opacity: 1.0;
    } 
  }

  &.disabled {
    opacity: 0.3;
  }
}

/* Accessibility buttons*/
.btn-access {
  &.active {
    opacity: 0.6;
  }
}

/* END FRONT PAGE FLOOR NAV */




/* BEGIN LANDING */
.landing-div {
  height: 90vh;
  width: 100vw;
  text-align: center;
}

.landing-ul {
  margin: auto;
  height: 100%;
  display: inline-table;

  li { /* Holds links to rest of site */
    display: block;
    height: 15vh; /* containing div is 90vh, divide by 5 and leave some extra */
    text-align: left;
    padding-top: 1vh;
    padding-bottom: 1vh;

    a { /* Anchors hold button images */
      height: 100%;
      display: inline-block;

      img { /* Button imags scale to fit container */
        height: 100%;
        width: auto;
        display: inline-block;
      }
    }

    span { /* Can further style the text accompanying buttons */
      display: inline-block;
    }

  }
}
/* END LANDING */

/* BEGIN MAP STYLING */

/* An aspect ration < 1 => device is in portrate mode*/
/* Map is given (90vh - 28vw) vertical space */
/* show.js sets map related elements based on height of myCanvas
    with an aspect ratio 1.1:2 => 1.1Width = 2Height */

@media (max-device-aspect-ratio: 1/1) {
  #myCanvas {
    width: 95vw;
  }

  #svgImage {
    width: 95vw;
    height: calc((1.1/2) * 95vw); /* Needed to force a vertical align */
  }
}

/* Aspect ratio > 1 => landscape or monitor */
@media (min-device-aspect-ratio: 1/1) {
  #myCanvas {
    width: calc((2/1.1) * 58vh);
  }

  #svgImage {
    width: calc((2/1.1) * 58vh);
    height: 58vh;
  }
}


#myCanvas {
  position:absolute;
  z-index: 0;

  display: block;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}

#svgImage {
  position: absolute;
  display: block;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  z-index: 50;
}

#viewing {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  display: none;
}

/* END MAP STYLING */


.btn-navbar-main {  //home button
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: 5px;
    padding: 3px 3px;
	border-radius: 50%;
}

.text-logout { //toggle menu list text size
  font-size: 2em;
}

.btn-logout-nav {
	height: 4.5vh;
	margin-top: 7px;
	float: right;
	border-radius: 4px;
}

.btn-text { //toggle menu list text size
  font-size: 1.25em;
}

.btn-block {
	text-align: left;
	text-indent: 40%;
}

.navbar-fixed-top .navbar-collapse,
.navbar-fixed-bottom .navbar-collapse {
  max-height: 100%;
}

.navbar-toggle .icon-bar {
	max-width: 6.5vh;
}

.navbar-collapse {
	img {
		height: 50px;	//icon size
	}
}

//STOP NAVBAR FROM COLLAPSING
.navbar-header {
    float: none;
	img {
		height: 50px;	//icon size
		max-height: 9vh;
	}
}
.navbar-toggle {
    display: block;
    padding: 10px 10px;
    margin-right: 10px;
	margin-left: 10px;
    margin-top: 10px;
	max-height: 9vh;
	max-width: 9vh;
}
.navbar-collapse {
    border-top: 1px solid transparent;
    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    max-height: 100%;
}
.navbar-collapse.collapse {
    display: none!important;
}

.navbar-collapse.collapse.in {
  display: block !important;
}
.navbar-nav {
    float: none!important;
    margin: 7.5px -15px;
}
.navbar-nav>li {
    float: none;
}
.navbar-nav>li>a {
    padding-top: 10px;
    padding-bottom: 10px;
}

